[package]
name = "slowpoke"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: Shrink tokio feature set?
tokio = { version = "=1.13.0", features = ["full"] }
axum = "=0.4.5"
warp = "=0.3.2"
log = "=0.4.14"
tower = "=0.4.11"
tower-service = "=0.3.1"
tower-http = "=0.2.2"
tracing = "=0.1.30"
tracing-subscriber = "=0.3.8"
pretty_env_logger = "=0.4.0"
