[package]
name = "slowpoke"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: Shrink tokio feature set?
tokio = { version = "=1.13.0", features = ["full"] }
axum = "=0.4.5"
config = "=0.11.0"
serde = { version = "=1.0.136", features = ["derive"] }
tower = "=0.4.11"
tower-service = "=0.3.1"
tower-http = "=0.2.2"
tracing = "=0.1.30"
tracing-subscriber = "=0.3.8"
